[package]
name = "nussinov_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nussinov"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
array2d = "0.2"
clap = { version = "3.2", features = ["derive"] }

